# Basic_Calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  calc_core.py  calculator.py  calculator_gui.py  calr_core.py  docker-compose.yml  expr_eval.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: app.py
plugins/: sample_plugin.py
test/: test_core.py
tests/: test_api.py  test_cli.py  test_core.py  test_expr.py  test_expr_eval.py  test_plugins.py  test_state_persistence.py  test_undo.py  test_variables.py
